--- a/source/Gemfile
+++ b/source/Gemfile
@@ -4,6 +4,7 @@ source 'https://rubygems.org'
 gem 'rails', '4.0.3'
 
 gem 'sqlite3'
+gem "octokit", "~> 2.0"
 
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
